Winter 2019/CCPS 209/209 Labs/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs
-d
C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs\P2J1.java
<---- end of javadoc command ---->
Loading source file C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs\P2J1.java...
C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs\P2J1.java:10: error: ';' expected
            for(int i = 0; i <= k, i++){
                                 ^
C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs\P2J1.java:10: error: ')' expected
            for(int i = 0; i <= k, i++){
                                  ^
C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs\P2J1.java:10: error: illegal start of expression
            for(int i = 0; i <= k, i++){
                                      ^
C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs\P2J1.java:22: error: ']' expected
        return int[0][0];
                   ^
C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs\P2J1.java:22: error: ';' expected
        return int[0][0];
                    ^
C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs\P2J1.java:22: error: illegal start of expression
        return int[0][0];
                     ^
C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs\P2J1.java:22: error: ';' expected
        return int[0][0];
                      ^
C:\Users\KWZA\Desktop\School\CCPS 209\209 Labs\P2J1.java:22: error: illegal start of expression
        return int[0][0];
                       ^
8 errors
